--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0"
